--- a/css/login.css
+++ b/css/login.css
@@ -69,7 +69,6 @@ h2
 	letter-spacing: 0.05em;
 	transition: 0.5s;
 	z-index: 10;
-    
 }
 .inputBox span 
 {
@@ -135,31 +134,38 @@ input[type="submit"]
 	border-radius: 4px;
 	font-weight: 600;
 	width: 100px;
-	margin-top: 10px;
+	margin-top: 15px;
   
 }
-input[type="submit"] :hover{
-    animation-name:multicolor;
+#Submit-button:hover{
+	animation: example 5s;
 }
-@keyframes multicolor {
-     to { background-color: #cf7db9;}
-    20% { background-color: #23242a;}
-    40% { background-color:#d8117b;}
-    60% { background-color:#d8ccd3;}
 
-}
+@keyframes example {
+	to {background-color: aliceblue;}
+	20% {background-color: #34f;}
+	30% {background-color: cadetblue;}
+	40% {background-color: #2545;}
+	50% {background-color: aqua;}
+	60% {background-color: #78f;}
+	70% {background-color: darkgray;}
+	80% {background-color: #454545;}
+	90% {background-color: darkgreen;}
+	100% {background-color: darkgoldenrod;}
+  }
     
 input[type="submit"]:active 
 {
 	opacity: 0.8;
 }
 
-#naam :invalid{
-    animation: shake 400ms;
-    color: red;
+#shaking:invalid{
+	animation-name: shake;
+	animation-duration: 300ms;
 }
+
 @keyframes shake {
-    50%{
+	50%{
         transform: translateX(5px);
     }
     75%{
