--- a/css/login.css
+++ b/css/login.css
@@ -134,9 +134,10 @@ input[type="submit"]
 	border-radius: 4px;
 	font-weight: 600;
 	width: 100px;
-	margin-top: 15px;
-  
+	margin-top: 30px;
+	float: right;
 }
+
 #Submit-button:hover{
 	animation: example 5s;
 }
