--- a/css/login.css
+++ b/css/login.css
@@ -1,178 +1,238 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
-*
-{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: cursive;
 }
-body 
-{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	min-height: 100vh;
-	flex-direction: column;
-	/* background: #23242a; */
-    background-image: url(../images/colorful-neon-computer-keyboards-wallpaper-preview.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  flex-direction: column;
+  /* background: #23242a; */
+  background-image: url(../images/colorful-neon-computer-keyboards-wallpaper-preview.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.box 
-{
-	position: relative;
-	width: 380px;
-	height: 420px;
-	background: rgb(0,0,0,0.8);
-	border-radius: 8px;
-	overflow: hidden;
-    box-shadow: 0 0 1.5rem;
-
+.box {
+  position: relative;
+  width: 380px;
+  height: 420px;
+  background: rgb(0, 0, 0, 0.8);
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 0 1.5rem;
 }
 
-
-form 
-{
-	position: absolute;
-	inset: 2px;
-	/* background: #28292d; */
-	padding: 50px 40px;
-	border-radius: 8px;
-	z-index: 2;
-	display: flex;
-	flex-direction: column;
+form {
+  position: absolute;
+  inset: 2px;
+  /* background: #28292d; */
+  padding: 50px 40px;
+  border-radius: 8px;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
 }
-h2 
-{
-	color: #e89ab9;
-	font-weight: 500;
-	text-align: center;
-	letter-spacing: 0.1em;
+h2 {
+  color: #e89ab9;
+  font-weight: 500;
+  text-align: center;
+  letter-spacing: 0.1em;
 }
-.inputBox 
-{
-	position: relative;
-	width: 300px;
-	margin-top: 35px;
+.inputBox {
+  position: relative;
+  width: 300px;
+  margin-top: 35px;
 }
-.inputBox input
-{
-	position: relative;
-	width: 100%;
-	padding: 20px 10px 10px;
-	background: transparent;
-	outline: none;
-	box-shadow: none;
-	border: none;
-	color: #23242a;
-	font-size: 1em;
-	letter-spacing: 0.05em;
-	transition: 0.5s;
-	z-index: 10;
+.inputBox input {
+  position: relative;
+  width: 100%;
+  padding: 20px 10px 10px;
+  background: transparent;
+  outline: none;
+  box-shadow: none;
+  border: none;
+  color: #23242a;
+  font-size: 1em;
+  letter-spacing: 0.05em;
+  transition: 0.5s;
+  z-index: 10;
 }
-.inputBox span 
-{
-	position: absolute;
-	left: 0;
-	padding: 20px 0px 10px;
-	pointer-events: none;
-	font-size: 1em;
-	color: #d8ccd3;
-	letter-spacing: 0.05em;
-	transition: 0.5s;
+.inputBox span {
+  position: absolute;
+  left: 0;
+  padding: 20px 0px 10px;
+  pointer-events: none;
+  font-size: 1em;
+  color: #d8ccd3;
+  letter-spacing: 0.05em;
+  transition: 0.5s;
 }
 .inputBox input:valid ~ span,
-.inputBox input:focus ~ span 
-{
-	color: #e292db;
-	transform: translateX(0px) translateY(-34px);
-	font-size: 0.75em;
+.inputBox input:focus ~ span {
+  color: #e292db;
+  transform: translateX(0px) translateY(-34px);
+  font-size: 0.75em;
 }
-.inputBox i 
-{
-	position: absolute;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	height: 2px;
-	background: #cf7db9;
-	border-radius: 4px;
-	overflow: hidden;
-	transition: 0.5s;
-	pointer-events: none;
-	z-index: 9;
+.inputBox i {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: #cf7db9;
+  border-radius: 4px;
+  overflow: hidden;
+  transition: 0.5s;
+  pointer-events: none;
+  z-index: 9;
 }
 .inputBox input:valid ~ i,
-.inputBox input:focus ~ i 
-{
-	height: 44px;
+.inputBox input:focus ~ i {
+  height: 44px;
 }
-.links 
-{
-	display: flex;
-	justify-content: space-between;
+.links {
+  display: flex;
+  justify-content: space-between;
 }
-.links a 
-{
-	margin: 10px 0;
-	font-size: 0.75em;
-	color: #cf7db9;
-	text-decoration: beige;
+.links a {
+  margin: 10px 0;
+  font-size: 0.75em;
+  color: #cf7db9;
+  text-decoration: beige;
 }
-.links a:hover, 
-.links a:nth-child(2)
-{
-	color:  #d8117b;
+.links a:hover,
+.links a:nth-child(2) {
+  color: #d8117b;
 }
-input[type="submit"] 
-{
-	border: none;
-	outline: none;
-	padding: 11px 25px;
-	background: #cf7db9;
-	cursor: pointer;
-	border-radius: 4px;
-	font-weight: 600;
-	width: 100px;
-	margin-top: 30px;
-	float: right;
+input[type='submit'] {
+  border: none;
+  outline: none;
+  padding: 11px 25px;
+  background: #cf7db9;
+  cursor: pointer;
+  border-radius: 4px;
+  font-weight: 600;
+  width: 100px;
+  margin-top: 30px;
+  float: right;
 }
 
-#Submit-button:hover{
-	animation: example 5s;
+#Submit-button:hover {
+  animation: example 5s;
 }
 
 @keyframes example {
-	to {background-color: aliceblue;}
-	20% {background-color: #34f;}
-	30% {background-color: cadetblue;}
-	40% {background-color: #2545;}
-	50% {background-color: aqua;}
-	60% {background-color: #78f;}
-	70% {background-color: darkgray;}
-	80% {background-color: #454545;}
-	90% {background-color: darkgreen;}
-	100% {background-color: darkgoldenrod;}
+  to {
+    background-color: aliceblue;
   }
-    
-input[type="submit"]:active 
-{
-	opacity: 0.8;
+  20% {
+    background-color: #34f;
+  }
+  30% {
+    background-color: cadetblue;
+  }
+  40% {
+    background-color: #2545;
+  }
+  50% {
+    background-color: aqua;
+  }
+  60% {
+    background-color: #78f;
+  }
+  70% {
+    background-color: darkgray;
+  }
+  80% {
+    background-color: #454545;
+  }
+  90% {
+    background-color: darkgreen;
+  }
+  100% {
+    background-color: darkgoldenrod;
+  }
 }
 
-#shaking:invalid{
-	animation-name: shake;
-	animation-duration: 300ms;
+input[type='submit']:active {
+  opacity: 0.8;
+}
+
+#shaking:invalid {
+  animation-name: shake;
+  animation-duration: 300ms;
 }
 
 @keyframes shake {
-	50%{
-        transform: translateX(5px);
-    }
-    75%{
-        transform: translateX(-5px);
-    }
-    100%{
-        transform: translateX(5px);
-    }
+  50% {
+    transform: translateX(5px);
+  }
+  75% {
+    transform: translateX(-5px);
+  }
+  100% {
+    transform: translateX(5px);
+  }
+}
+@media screen and (max-width: 480px) and (min-width: 0px) {
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+
+  body {
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
+  }
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    flex-direction: column;
+    background-image: url(../images/colorful-neon-computer-keyboards-wallpaper-preview.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .box {
+    position: relative;
+    width: 380px;
+    height: 420px;
+    background: rgb(0, 0, 0, 0.8);
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 0 1.5rem;
+    margin-bottom: 1rem;
+  }
+
+  form {
+    position: absolute;
+    padding: 20px 20px;
+    border-radius: 8px;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .inputBox {
+    position: relative;
+    width: 340px;
+    margin-top: 35px;
+  }
+
+  input[type='submit'] {
+    border: none;
+    outline: none;
+    padding: 11px 25px;
+    background: #cf7db9;
+    cursor: pointer;
+    border-radius: 4px;
+    font-weight: 600;
+    width: 100px;
+    float: right;
+    margin-top: 3rem;
+  }
 }
