--- a/css/login.css
+++ b/css/login.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -108,7 +108,7 @@ h2 {
 .links a:nth-child(2) {
   color: #d8117b;
 }
-input[type='submit'] {
+input[type="submit"] {
   border: none;
   outline: none;
   padding: 11px 25px;
@@ -158,7 +158,7 @@ input[type='submit'] {
   }
 }
 
-input[type='submit']:active {
+input[type="submit"]:active {
   opacity: 0.8;
 }
 
@@ -179,7 +179,7 @@ input[type='submit']:active {
   }
 }
 @media screen and (max-width: 480px) and (min-width: 0px) {
-  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+  @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 
   body {
     margin-left: auto;
@@ -223,7 +223,7 @@ input[type='submit']:active {
     margin-top: 35px;
   }
 
-  input[type='submit'] {
+  input[type="submit"] {
     border: none;
     outline: none;
     padding: 11px 25px;
