--- a/css/quizPage.css
+++ b/css/quizPage.css
@@ -26,7 +26,7 @@ body {
 }
 
 .inner-div h2 {
-  font-size: 2.05rem;
+  font-size: 1.7rem;
   font-weight: 400;
   margin: 1rem 0 4rem 0;
 }
@@ -79,10 +79,21 @@ input {
   margin-bottom: -2rem;
   padding: 2rem 2rem;
   box-shadow: 0 1rem 1rem -0.8rem rgba(0, 0, 0, 0.4);
+  display: none;
 }
 
-.scoreArea {
-  display: none;
+#feedback {
+ padding: 6px;
+ border-radius: 20px;
+ cursor: pointer;
+ border: none;
+ float: right;
+ margin-top: 3px;
+ text-decoration: underline;
+}
+
+#feedback:hover{
+  color: lightblue;
 }
 
 @media screen and (max-width: 480px) and (min-width: 0px) {
