--- a/css/Math.css
+++ b/css/Math.css
@@ -45,8 +45,10 @@ body {
 }
 
 input {
-  cursor: pointer;
-  width: 1.5rem;
+width: 4rem;
+background: transparent;
+background-color: #DFCFBE;
+font-weight: bold;
 }
 
 #Submit,
@@ -77,13 +79,15 @@ input {
 #showScore {
   background-color: #dfe6e9;
   margin-top: 2rem;
-  margin-bottom: -2rem;
+  margin-bottom: -2.7rem;
   padding: 1rem 1rem;
   box-shadow: 0 1rem 1rem -0.8rem rgba(0, 0, 0, 0.6);
 }
 
 h3 {
   text-align: center;
+  margin-top: -10px;
+  margin-left: 20px;
 }
 
 .btn {
@@ -100,27 +104,12 @@ h3 {
   cursor: pointer;
   border: none;
   float: right;
-  margin-top: 3px;
+  margin-top: -12px;
   text-decoration: underline;
 }
 
 #feedback:hover {
   color: lightblue;
-}
-
-#categories {
-  margin-top: 4px;
-  margin-right: 0.7rem;
-  float: right;
-  border-radius: 1rem;
-  padding: 5px;
-  box-shadow: 0 1rem 1rem -0.6rem rgba(0, 0, 0, 0.5);
-  cursor: pointer;
-}
-
-#categories option {
-  font-size: 15px;
-  background-color: lightcoral;
 }
 
 @media screen and (max-width: 480px) and (min-width: 0px) {
