Completed all js work

--- a/css/True-False.css
+++ b/css/True-False.css
@@ -83,6 +83,8 @@ width: 1.6rem;
 
 h3 {
   text-align: center;
+  margin-top: -10px;
+  margin-left: 20px;
 }
 
 .btn {
@@ -99,7 +101,7 @@ h3 {
   cursor: pointer;
   border: none;
   float: right;
-  margin-top: 3px;
+  margin-top: -12px;
   text-decoration: underline;
 }
 
